# TTCS

./: .env.example  .gitignore  AGENTS.md  README.md  agent.md  docker-compose.yml  第13组-团队任务协作管理系统-项目需求模型-补全用例图.docx  第13组-团队任务协作管理系统-项目需求规格说明书.docx
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
01-requirements/: 01-project-charter.md  02-srs.md  03-use-case.md  04-data-flow.md  04-prototype.md  05-change-request-001.md
02-design/: 01-task-acceptance-design.md  02-high-level-design.md  03-low-level-design.md
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260517_0001_create_users.py  20260517_0002_create_team_project_board.py  20260518_0003_create_task_execution_tables.py
backend/app/: deps.py  main.py
backend/app/api/v1/: auth.py  health.py  projects.py  router.py  tasks.py  teams.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  project.py  task.py  team.py  user.py
backend/app/schemas/: auth.py  project.py  task.py  team.py
backend/app/scripts/: ensure_migrations.py  seed_demo_user.py
backend/app/services/: auth_service.py  permissions.py  project_service.py  task_service.py  task_state.py  team_service.py  work_log_service.py
backend/tests/: conftest.py  test_auth.py  test_health.py  test_migration_guard.py  test_task_execution.py  test_team_project.py
design-system/: MASTER.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.ts
(+108 files in other folders)
