[project]
name = "ttcs-backend"
version = "0.1.0"
description = "TTCS FastAPI backend"
requires-python = ">=3.10"
dependencies = [
  "alembic>=1.13.0",
  "bcrypt>=3.2.0,<4.0.0",
  "email-validator>=2.1.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "passlib[bcrypt]>=1.7.4",
  "pydantic-settings>=2.6.0",
  "pymysql>=1.1.1",
  "python-jose[cryptography]>=3.3.0",
  "sqlalchemy>=2.0.30",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
